# api-env

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  app.py  mkdocs.yml  pyproject.toml  requirements.txt
compax_api/: config.py  database.py  errors.py  models.py  utils.py
docs/: index.md
queries/: get_all_buildings.sql  get_all_classroom_in_building_name.sql  get_all_classrooms.sql  get_all_classrooms_in_building_id.sql  get_all_labs.sql  get_all_labs_in_building_id.sql  get_all_labs_in_building_name.sql  get_all_offices.sql  get_all_offices_in_building_id.sql  get_all_rating_office.sql  get_all_ratings.sql  get_all_ratings_building.sql  get_all_ratings_classroom.sql  get_all_ratings_lab.sql  get_all_ratings_office.sql  get_all_schedule.sql  get_building_with_id.sql  get_building_with_name.sql  get_classroom_with_id.sql  get_classroom_with_name.sql  get_lab_with_id.sql  get_lab_with_name.sql  get_office_with_id.sql  get_office_with_name.sql  get_schedule_all_for_day.sql  get_schedule_all_for_session.sql  get_schedule_day_with_classes.sql  get_schedule_day_with_user_data.sql  get_schedule_for_building.sql  get_schedule_for_classroom.sql  get_schedule_for_lab.sql  get_schedule_with_user_data.sql  get_user_reference.sql  get_user_username.sql  get_user_uuid.sql  insert_into_ratings.sql  insert_into_users.sql  update_ratings_comments.sql
routes/: admin.py  auth.py  building.py  classroom.py  laboratory.py  office.py  ratings.py  schedule.py  user.py
schema/: admin.py  buildings.py  classroom.py  laboratory.py  office.py  ratings.py  (+2 more)
(+4 files in other folders)
