[tool.poetry]
name = "compax-api"
version = "0.1.0"
description = ""
authors = ["blackprince001 <appiahboaduprince@gmail.com>"]
readme = "README.md"
packages = [{include = "compax_api"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.9"
sqlalchemy = "^2.0.16"
uvicorn = "^0.22.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-dotenv = "0.19.2"


[tool.poetry.group.docs.dependencies]
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.16"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
black = "^23.3.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
